--- a/ShareBudget/CreateSearchTableViewHeader.xib
+++ b/ShareBudget/CreateSearchTableViewHeader.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,19 +15,32 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uHc-8u-y4I">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ttu-P9-MRB">
                     <rect key="frame" x="56" y="8" width="311" height="44"/>
+                    <subviews>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uHc-8u-y4I">
+                            <rect key="frame" x="8" y="0.0" width="295" height="44"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="44" id="6fb-7Q-Qub"/>
+                            </constraints>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <action selector="textChanged" destination="iN0-l3-epB" eventType="editingChanged" id="5sV-ej-3iA"/>
+                                <outlet property="delegate" destination="iN0-l3-epB" id="fFr-GP-Iky"/>
+                            </connections>
+                        </textField>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="44" id="6fb-7Q-Qub"/>
+                        <constraint firstItem="uHc-8u-y4I" firstAttribute="top" secondItem="ttu-P9-MRB" secondAttribute="top" id="5Wr-Cr-vU6"/>
+                        <constraint firstItem="uHc-8u-y4I" firstAttribute="leading" secondItem="ttu-P9-MRB" secondAttribute="leading" constant="8" id="HLz-w6-PY7"/>
+                        <constraint firstAttribute="trailing" secondItem="uHc-8u-y4I" secondAttribute="trailing" constant="8" id="hq3-3J-PG6"/>
+                        <constraint firstAttribute="bottom" secondItem="uHc-8u-y4I" secondAttribute="bottom" id="t8K-YE-mIR"/>
+                        <constraint firstItem="uHc-8u-y4I" firstAttribute="centerY" secondItem="ttu-P9-MRB" secondAttribute="centerY" id="w0N-1g-XDu"/>
                     </constraints>
-                    <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
-                    <connections>
-                        <action selector="textChanged" destination="iN0-l3-epB" eventType="editingChanged" id="5sV-ej-3iA"/>
-                        <outlet property="delegate" destination="iN0-l3-epB" id="fFr-GP-Iky"/>
-                    </connections>
-                </textField>
+                </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QWO-ZR-aBl">
                     <rect key="frame" x="8" y="10" width="40" height="40"/>
                     <constraints>
@@ -40,19 +53,30 @@
                         <action selector="modeAction" destination="iN0-l3-epB" eventType="touchUpInside" id="tXG-66-jFR"/>
                     </connections>
                 </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bnf-QH-89e">
+                    <rect key="frame" x="0.0" y="59" width="375" height="1"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="dxB-Pb-NCY"/>
+                    </constraints>
+                </view>
             </subviews>
             <constraints>
-                <constraint firstItem="uHc-8u-y4I" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Isj-17-7xp"/>
+                <constraint firstAttribute="bottom" secondItem="bnf-QH-89e" secondAttribute="bottom" id="9bf-l9-6Uf"/>
+                <constraint firstItem="ttu-P9-MRB" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Pr3-Ky-ehN"/>
                 <constraint firstItem="QWO-ZR-aBl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="QKb-FI-qmI"/>
+                <constraint firstAttribute="trailing" secondItem="ttu-P9-MRB" secondAttribute="trailing" constant="8" id="R35-qX-jjw"/>
+                <constraint firstItem="ttu-P9-MRB" firstAttribute="leading" secondItem="QWO-ZR-aBl" secondAttribute="trailing" constant="8" id="T2d-zu-HuJ"/>
+                <constraint firstAttribute="trailing" secondItem="bnf-QH-89e" secondAttribute="trailing" id="W6K-Qp-5uq"/>
                 <constraint firstItem="QWO-ZR-aBl" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="axx-n4-XIv"/>
-                <constraint firstAttribute="trailing" secondItem="uHc-8u-y4I" secondAttribute="trailing" constant="8" id="q2m-D9-Iik"/>
-                <constraint firstItem="uHc-8u-y4I" firstAttribute="leading" secondItem="QWO-ZR-aBl" secondAttribute="trailing" constant="8" id="xcn-Io-hz4"/>
+                <constraint firstItem="bnf-QH-89e" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ku6-eF-xj0"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="searchCreateButton" destination="QWO-ZR-aBl" id="nNw-Sq-A0F"/>
                 <outlet property="textField" destination="uHc-8u-y4I" id="7Vw-0x-TD9"/>
+                <outlet property="textFieldRootView" destination="ttu-P9-MRB" id="daK-9q-p3W"/>
             </connections>
             <point key="canvasLocation" x="33.5" y="54"/>
         </view>
