--- a/ShareBudget/Base.lproj/Main.storyboard
+++ b/ShareBudget/Base.lproj/Main.storyboard
@@ -273,7 +273,7 @@
                                 <rect key="frame" x="0.0" y="124" width="320" height="444"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Press &quot;+&quot; to create new group" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SfK-Ue-g2l">
-                                        <rect key="frame" x="0.0" y="211.5" width="320" height="21"/>
+                                        <rect key="frame" x="8" y="211.5" width="304" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -281,9 +281,9 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="SfK-Ue-g2l" firstAttribute="leading" secondItem="J1p-Fe-VjH" secondAttribute="leading" id="K7i-bm-XQq"/>
+                                    <constraint firstItem="SfK-Ue-g2l" firstAttribute="leading" secondItem="J1p-Fe-VjH" secondAttribute="leading" constant="8" id="K7i-bm-XQq"/>
                                     <constraint firstItem="SfK-Ue-g2l" firstAttribute="centerY" secondItem="J1p-Fe-VjH" secondAttribute="centerY" id="XyC-95-mUc"/>
-                                    <constraint firstAttribute="trailing" secondItem="SfK-Ue-g2l" secondAttribute="trailing" id="fch-TI-OP2"/>
+                                    <constraint firstAttribute="trailing" secondItem="SfK-Ue-g2l" secondAttribute="trailing" constant="8" id="fch-TI-OP2"/>
                                 </constraints>
                             </view>
                         </subviews>
